tests/fixtures/negative/licensing/OptInMarkerExposedPublicly.kt
package test

import kotlinx.coroutines.ExperimentalCoroutinesApi

@OptIn(ExperimentalCoroutinesApi::class)
private fun internalUse() = Unit
